@@ -11,10 +11,7 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import java.io.Serializable;
 import java.time.LocalDateTime;
-import java.util.Collection;
-import java.util.Date;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 
 @Builder
 @NoArgsConstructor
@@ -78,6 +75,18 @@ public class User implements UserDetails, Serializable {
     this.registrationDate=registrationDate;
   }
 
+  public User(String firstname, String lastname, String cin, String email, String numTel, String identifiant, Nationality nationality, NiveauSuivant niveauSuivant, Sexe sexe) {
+    this.firstname = firstname;
+    this.lastname = lastname;
+    this.email = email;
+    this.sexe = sexe;
+    this.nationality = nationality;
+    this.cin = cin;
+    this.numTel = numTel;
+    this.identifiant = identifiant;
+    this.niveauSuivant=niveauSuivant;
+  }
+
   @Override
   public String toString() {
     return "Student : \n" +
@@ -90,7 +99,6 @@ public class User implements UserDetails, Serializable {
   @JsonIgnore
   @Enumerated(EnumType.STRING)
   private Status status=Status.Active;
-  @JsonIgnore
   @OneToMany(mappedBy = "user")
   @JsonIgnore
   private List<Token> tokens;
@@ -100,43 +108,33 @@ public class User implements UserDetails, Serializable {
 
   @JsonIgnore
   @OneToMany(mappedBy = "user")
-  @JsonIgnore
   private List<Rating> ratings;
   @ManyToOne
   @JsonIgnore
   Event event;
   @JsonIgnore
   @ManyToOne
-  @JsonIgnore
   Event event2;
   @JsonIgnore
   @OneToMany(cascade= CascadeType.ALL, mappedBy = "complaintPar")
-  @JsonIgnore
   List<Complaint> listOfComplaints;
   @JsonIgnore
-
   @OneToMany(cascade= CascadeType.ALL, mappedBy = "publierPar")
-  @JsonIgnore
   List<Publication> listOfPublication;
   @JsonIgnore
   @OneToMany(cascade= CascadeType.ALL, mappedBy = "signalPar")
-  @JsonIgnore
   List<SignalPost> signalPosts;
   @JsonIgnore
   @OneToMany(cascade= CascadeType.ALL, mappedBy = "user")
-  @JsonIgnore
   List<React> reacts;
   @JsonIgnore
   @ManyToMany(mappedBy = "likerPar",cascade = CascadeType.ALL)
-  @JsonIgnore
   private Set<Publication> listPublicationLikee;
   @JsonIgnore
   @OneToMany(mappedBy = "CommentPar",cascade = CascadeType.ALL)
-  @JsonIgnore
   private Set<Comment> comments;
   @JsonIgnore
   @ManyToOne
-  @JsonIgnore
   Realisation realisation;
 
   @OneToOne
@@ -149,15 +147,13 @@ public class User implements UserDetails, Serializable {
   private Set<Interview> InterviewEvaluators;
   @JsonIgnore
   @OneToMany(cascade = CascadeType.ALL)
-  @JsonIgnore
   private Set<FileEntity> files;
   @JsonIgnore
   @ManyToMany(cascade= CascadeType.ALL)
-  @JsonIgnore
   private Set<Classroom> classroomSet;
   @Override
   public Collection<? extends GrantedAuthority> getAuthorities() {
-    return List.of(new SimpleGrantedAuthority(role.name()));
+    return Collections.emptyList();
   }
 
   @Override
